@@ -1,0 +1,8 @@
+#!/bin/bash
+
+# cwd is ~nefias/
+rm -f ./nefias/tmp/*
+rm -f ./nefias/input/*
+
+exit 0
+
